fixed quill overflow

--- a/webapp-src/atest-app-webapp/src/styles.css
+++ b/webapp-src/atest-app-webapp/src/styles.css
@@ -4,4 +4,5 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 html {
   background: radial-gradient(circle at 16.6% 12%, rgb(64, 0, 126) 30.8%, rgb(255, 191, 0) 100.2%);
+  background-attachment: fixed;
 }
